# stylebase-translator

./: CMakeLists.txt  README.md
include/blazorTypes/: BlazorComponent.hpp  BlazorDocument.hpp  BlazorParameter.hpp  BlazorParameterTypes.hpp  BlazorProject.hpp
include/blazor_types/: blazor_component.hpp  blazor_document.hpp  blazor_element.hpp  blazor_parameter.hpp  blazor_project.hpp
include/constants/: stylebase_consts.hpp
include/stylebase_structs/: base_structs.hpp
resources/: example.json  simpleExample.json
src/: main.cpp
src/blazorTypes/: BlazorComponent.cpp  BlazorDocument.cpp  BlazorParameter.cpp  BlazorProject.cpp
src/blazor_types/: blazor_component.cpp  blazor_document.cpp  blazor_parameter.cpp  blazor_project.cpp
src/stylebase_structs/: base_structs.cpp
